Added NuGet package.(Spectre.Console)

--- a/FlightBooker/FlightBooker.csproj
+++ b/FlightBooker/FlightBooker.csproj
@@ -8,8 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Interfaces\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Spectre.Console" Version="0.48.1-preview.0.12" />
   </ItemGroup>
 
 </Project>
